force-app/main/default/objects/ffr__InquiryTemplate__c/ffr__InquiryTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpinquirytemplate</customHelpPage>
    <description>Stores a template that is associated with a dataview for the purpose of running action views.</description>
    <label>Action View Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action View Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>