force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__AxisASort__c.field-meta.xml
<CustomField>
    <fullName>ffr__AxisASort__c</fullName>
    <label>Axis A Sort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>