force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__AxisBRotate__c.field-meta.xml
<CustomField>
    <fullName>ffr__AxisBRotate__c</fullName>
    <label>Axis B Rotate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>