force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__BaseDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__BaseDate__c</fullName>
    <label>Base Date</label>
    <type>Date</type>
</CustomField>