force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__BasisDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__BasisDate__c</fullName>
    <label>Basis Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create date</fullName>
                <default>true</default>
                <label>Create date</label>
            </value>
            <value>
                <fullName>Register date</fullName>
            </value>
            <value>
                <fullName>Due date</fullName>
            </value>
            <value>
                <fullName>Tax point date</fullName>
            </value>
            <value>
                <fullName>Payment date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>