force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__ChartAxisA__c.field-meta.xml
<CustomField>
    <fullName>ffr__ChartAxisA__c</fullName>
    <label>Axis A Column</label>
    <length>80</length>
    <type>Text</type>
</CustomField>