force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__ChartAxisB__c.field-meta.xml
<CustomField>
    <fullName>ffr__ChartAxisB__c</fullName>
    <label>Axis B Column</label>
    <length>80</length>
    <type>Text</type>
</CustomField>