force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__ChartLabelType__c.field-meta.xml
<CustomField>
    <fullName>ffr__ChartLabelType__c</fullName>
    <label>Labels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>