force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__ChartMode__c.field-meta.xml
<CustomField>
    <fullName>ffr__ChartMode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>