force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__ChartScaling__c.field-meta.xml
<CustomField>
    <fullName>ffr__ChartScaling__c</fullName>
    <label>Scaling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Scale to Nearest Thousand</fullName>
            </value>
            <value>
                <fullName>Scale to Nearest Million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>