force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__ColumnFilterDrill__c.field-meta.xml
<CustomField>
    <fullName>ffr__ColumnFilterDrill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Column Filter Drill</label>
    <type>Checkbox</type>
</CustomField>