force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__IncludeRowFilterWhenDrillDestination__c.field-meta.xml
<CustomField>
    <fullName>ffr__IncludeRowFilterWhenDrillDestination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include RowFilter When Drill Destination</label>
    <type>Checkbox</type>
</CustomField>