force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__PromptBasePeriod__c.field-meta.xml
<CustomField>
    <fullName>ffr__PromptBasePeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prompt</label>
    <type>Checkbox</type>
</CustomField>