force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__ShowDocumentCount__c.field-meta.xml
<CustomField>
    <fullName>ffr__ShowDocumentCount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Record Count</label>
    <type>Checkbox</type>
</CustomField>