force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__SignFilterCosmetic__c.field-meta.xml
<CustomField>
    <fullName>ffr__SignFilterCosmetic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse the sign on totals</label>
    <type>Checkbox</type>
</CustomField>