force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__SummarizationTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffr__SummarizationTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Summarization Template</label>
    <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
    <relationshipLabel>Summarization Templates</relationshipLabel>
    <relationshipName>SummarizationTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>