force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__SummarizeDuplicateRows__c.field-meta.xml
<CustomField>
    <fullName>ffr__SummarizeDuplicateRows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summarize Duplicate Rows</label>
    <type>Checkbox</type>
</CustomField>