force-app/main/default/objects/ffr__InquiryTemplate__c/fields/ffr__TemplateType__c.field-meta.xml
<CustomField>
    <fullName>ffr__TemplateType__c</fullName>
    <defaultValue>&quot;ACTIONVIEW&quot;</defaultValue>
    <label>Template Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>