force-app/main/default/objects/ffr__InquiryTemplate__c/listViews/ffr__All.listView-meta.xml
<ListView>
    <fullName>ffr__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>